--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       <a href="#">Learn more</a>
     </div>
 
-    <div class="category suv">
+    <div class="category suv animation-1">
       <img src="images/icon-suvs.svg" alt="icon of the SUV category">
       <h2>Suvs</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
       <a href="#">Learn more</a>
     </div>
 
-    <div class="category luxury">
+    <div class="category luxury animation-2">
       <img src="images/icon-luxury.svg" alt="icon of the sedan category">
       <h2>Luxury</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
