--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://www.frontendmentor.io/profile/vernerk" target="_blank">Verner</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/vernerk" target="_blank">Verner</a>
   </div>
 </body>
 </html>
